k8s/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: angular-frontend
  namespace: groupeisi-staging
spec:
  selector:
    app: angular-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
