k8s/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-frontend
  namespace: groupeisi-staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: staging.groupeisi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angular-frontend
            port:
              number: 80
